applications/cloud/ocis_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ocis-server
  namespace: cloud
  labels:
    app.kubernetes.io/name: server
    app.kubernetes.io/instance: ocis
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: ocis
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
        app.kubernetes.io/instance: ocis
    spec:
      automountServiceAccountToken: true
      securityContext:
          fsGroup: 1000
          fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: ocis
          image: "registry.lab.reisman.org/proxy.docker.io/owncloud/ocis:4.0.5"
          command: ["ocis"]
          args: ["server"]
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: metrics-debug
            timeoutSeconds: 10
            initialDelaySeconds: 60
            periodSeconds: 20
            failureThreshold: 3
          resources: {}
          ports:
            - name: http
              containerPort: 9200
            - name: metrics-debug
              containerPort: 9205
          volumeMounts:
            - name: ocis-config
              mountPath: /etc/ocis
            - name: ocis-data
              mountPath: /var/lib/ocis
            - name: tmp-volume
              mountPath: /tmp
      volumes:
        - name: ocis-config
          configMap:
            name: ocis-server-config
        - name: ocis-data
          persistentVolumeClaim:
            claimName: ocis-data
        - name: tmp-volume
          emptyDir: {}
